--- a/scss/impo.scss
+++ b/scss/impo.scss
@@ -7,6 +7,7 @@
 @import "medi_scss/medi.scss";
 @import "heade.scss";
 @import "mai.scss";
+@import "foote.scss";
 .wrappe {
     border: 7px solid darkblue;
     .blo {
