--- a/scss/foote.scss
+++ b/scss/foote.scss
@@ -1,31 +1,39 @@
 .foote {
+    border: 7px solid darkgreen;
     .foote_ro {
+        border: 7px solid darkgreen;
         .foote_ro_blo1 {
+            border: 7px solid darkgreen;
             .foote_ro_blo1_ro {
+                border: 7px solid darkgreen;
                 .foote_ro_blo1_ro_tx1 {
-
+                    border: 7px solid darkgreen;
                 }
             }
         }
 
         .foote_ro_blo2 {
+            border: 7px solid darkgreen;
             .foote_ro_blo2_ro {
+                border: 7px solid darkgreen;
                 .foote_ro_blo2_ro_blo1 {
+                    border: 7px solid darkgreen;
                     .foote_ro_blo2_ro_blo1_ro {
+                        border: 7px solid darkgreen;
                         .foote_ro_blo2_ro_blo1_ro_tx1 {
-
+                            border: 7px solid darkgreen;
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx2 {
-                            
+                            border: 7px solid darkgreen;
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx3 {
-                            
+                            border: 7px solid darkgreen;
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx4 {
-                            
+                            border: 7px solid darkgreen;
                         }
                     }
                 }
