--- a/scss/foote.scss
+++ b/scss/foote.scss
@@ -1,12 +1,20 @@
 .foote {
-    border: 7px solid darkgreen;
     .foote_ro {
+        display: flex;
+        flex-direction: row;
         border: 7px solid darkgreen;
         .foote_ro_blo1 {
             border: 7px solid darkgreen;
             .foote_ro_blo1_ro {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
                 border: 7px solid darkgreen;
                 .foote_ro_blo1_ro_tx1 {
+                    font-style: normal;
+                    color: black;
+                    font-size: 19px;
+                    font-family: "Pathway Gothic One", sans-serif;
                     border: 7px solid darkgreen;
                 }
             }
@@ -15,25 +23,153 @@
         .foote_ro_blo2 {
             border: 7px solid darkgreen;
             .foote_ro_blo2_ro {
+                display: flex;
+                flex-direction: column;
                 border: 7px solid darkgreen;
                 .foote_ro_blo2_ro_blo1 {
                     border: 7px solid darkgreen;
                     .foote_ro_blo2_ro_blo1_ro {
+                        display: flex;
+                        flex-direction: column;
                         border: 7px solid darkgreen;
                         .foote_ro_blo2_ro_blo1_ro_tx1 {
+                            position: relative;
+                            font-style: normal;
+                            font-size: 15px;
+                            cursor: pointer;
+                            color: black;
+                            font-family: "Source Serif Pro", sans-serif;
                             border: 7px solid darkgreen;
+                            transition: 0.5s;
+                            &::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 0px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                                transition: 0.5s;
+                            }
+
+                            &:hover::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 56px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                            }
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx2 {
+                            position: relative;
+                            font-style: normal;
+                            font-size: 15px;
+                            cursor: pointer;
+                            color: black;
+                            font-family: "Source Serif Pro", sans-serif;
                             border: 7px solid darkgreen;
+                            transition: 0.5s;
+                            &::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 0px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                                transition: 0.5s;
+                            }
+
+                            &:hover::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 56px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                            }
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx3 {
+                            position: relative;
+                            font-style: normal;
+                            font-size: 15px;
+                            cursor: pointer;
+                            color: black;
+                            font-family: "Source Serif Pro", sans-serif;
                             border: 7px solid darkgreen;
+                            transition: 0.5s;
+                            &::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 0px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                                transition: 0.5s;
+                            }
+
+                            &:hover::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 39px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                            }
                         }
 
                         .foote_ro_blo2_ro_blo1_ro_tx4 {
+                            position: relative;
+                            font-style: normal;
+                            font-size: 15px;
+                            cursor: pointer;
+                            color: black;
+                            font-family: "Source Serif Pro", sans-serif;
                             border: 7px solid darkgreen;
+                            transition: 0.5s;
+                            &::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 0px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                                transition: 0.5s;
+                            }
+
+                            &:hover::after {
+                                content: " ";
+                                position: absolute;
+                                cursor: pointer;
+                                width: 39px;
+                                height: 5px;
+                                border-radius: 75px;
+                                background-color: black;
+                                left: 0px;
+                                bottom: -1px;
+                            }
                         }
                     }
                 }
