--- a/scss/impo.scss
+++ b/scss/impo.scss
@@ -8,6 +8,7 @@
 @import "heade.scss";
 @import "mai.scss";
 @import "foote.scss";
+@import "scrol_scss/scrol.scss";
 .wrappe {
     border: 7px solid darkblue;
     .blo {
